Revision history for File-LoadLines

1.030

	(With chomp=0) Allow final line to not be terminated.

1.021	2021-08-16

	Re-align version numbering.

1.020.2	2021-02-02

	Fix test 29.

1.020.1	2021-02-02

	Fix test 29.

1.02	2021-02-01

	Improve handling of non-latin1 filenames on MS Windows.

1.01	2020-12-10

	Change README to README.md.
	Return the encoding used in the $options hash, if any.
	Detect ASCII.

1.00	2020-12-03

	Fix Carp and Test::Exception dependencies.
	Assume mature.

0.02	2018-11-06

	Mostly documentation enhancements.

0.01    2018-10-26

	First version, released on an unsuspecting world.
