@@ -9,6 +9,8 @@ t/11-basic.t
 t/12-basic.t
 t/13-nochomp.t
 t/14-noeof.t
+t/15-blob.t
+t/16-soft.t
 t/20-encoding.t
 t/21-encoding.t
 t/22-encoding.t
