@@ -2,6 +2,8 @@ Revision history for File-LoadLines
 
 1.030
 
+	Add support for blob, soft failures and network fetching.
+	
 	(With chomp=0) Allow final line to not be terminated.
 
 1.021	2021-08-16
